gcc/testsuite/g++.dg/cpp0x/udlit-linkage-neg.C
// { dg-options -std=c++0x }

extern "C"_badlinkage {	// { dg-error "expected unqualified-id before" }

int foo();

}
